# GROOT

./: .gitignore  README.md  index.html  pyproject.toml
jarvis/: run_agent.py
jarvis/arm/configs/policy/: groot_eff_1x.yaml  vpt_native.yaml
jarvis/arm/models/: __init__.py
jarvis/arm/models/agents/: __init__.py  base_agent.py  conditioned_agent.py  mixed_agent.py
jarvis/arm/models/backbones/: __init__.py
jarvis/arm/models/encoders/: __init__.py  action_encoder.py  trajectory_encoder.py
jarvis/arm/models/fusions/: __init__.py
jarvis/arm/models/heads/: __init__.py  regular_head.py
jarvis/arm/models/policys/: __init__.py  groot_policy.py
jarvis/assets/: __init__.py  spawn.json  tag_items.json
jarvis/global_configs/envs/: build_dig3fill1.yaml  build_golems.yaml  build_obsidian.yaml  build_pillar.yaml  collect_grass.yaml  collect_wool.yaml  craft_enchantment.yaml  explore_mine.yaml  survive_plant.yaml  tool_bow.yaml
jarvis/stark_tech/: env_interface.py
jarvis/stark_tech/human_play_interface/: human_play_interface.py
static/css/: index.css
